<resources>
    <string name="app_name">CoffeeScope</string>
    <string name="title_activity_maps">Map</string>
    <string name="permission_required_toast">permission_required_toast</string>
    <string name="permission_rationale_location">permission_rationale_location</string>
    <string name="location_permission_denied">location_permission_denied</string>
    <string name="сomment">Комментарий:</string>
    <string name="enter_сomment">Введите комментарий</string>
    <string name="order_time">Время заказа</string>
    <string name="how_to_pay">С помощью карты</string>
    <string name="count_position">Кол-во напитков</string>
    <string name="menu">Меню</string>
    <string name="my_order">Мой заказ</string>
    <string name="send">Отправить</string>
    <string name="save">Сохранить</string>
    <string name="as_soon_as_possible">Как можно скорее</string>
    <string name="at_time">Ко времени</string>
    <string name="btn_order_result_text">Итого:</string>
    <string name="e_mail_address">Адрес электронной почты</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login">Войти</string>
    <string name="dont_have_account">У вас ещё нет учётной записи?</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="authorization">Авторизация</string>
    <string name="reset_password">Восстановить пароль</string>
    <string name="last_name">Фамилия</string>
    <string name="name">Имя</string>
    <string name="registration_policy">Регистрируясь, я соглашаюсь с правилами политики конфиденциальности</string>
    <string name="error_1">Ошибка ввода!</string>
    <string name="cancel">Отмена</string>
    <string name="let">Давайте</string>
    <string name="profile">Профиль</string>
    <string name="rating">Рейтинг</string>
    <string name="write_feedback">Написать обратную связь</string>
    <string name="edit_pass">Изменить пароль</string>
    <string name="logout">Выйти</string>
    <string name="until">до %s</string>
    <plurals name="drinks">
        <item quantity="zero">%d напитков</item>
        <item quantity="one">%d напиток</item>
        <item quantity="few">%d напитка</item>
        <item quantity="many">%d напитков</item>
        <item quantity="other">%d напитков</item>
        <item quantity="two">%d напитка</item>
    </plurals>
    <string name="button_order">В заказе %1$s (%2$d %3$s)</string>
    <string name="logout_message">Вы уверены, что хотите выйти?</string>
    <string name="base_url">http://coffeescope.istomin.im/api/v1/</string>
    <string name="transitionProduct">transitionProductToToolbar</string>

    //network and errors
    <string name="error_token_expired">Срок действия данного токена истек.</string>
    <string name="success">success</string>
    <string name="error">error</string>
    <string name="expired">expired</string>
    <string name="reset_password_text">Введите адрес электронной почты, указанный при регистрации:</string>
    <string name="feedback_sent">Ваш отзыв успешно отправлен!</string>
    <string name="write_comment">Напишите комментарий</string>
    <string name="have_a_nice_day">Удачного Вам дня!</string>
    <plurals name="feedback_limit">
        <item quantity="zero">Ограничение по символам: 0 символов.</item>
        <item quantity="one">Ограничение по символам: %1$d символ.</item>
        <item quantity="few">Ограничение по символам: %1$d символа.</item>
        <item quantity="many">Ограничение по символам: %1$d символов.</item>
    </plurals>
    <string name="search">Поиск</string>
    <string name="search_hint">Введите название или адрес</string>
    <string name="emtpy_search_text">Найди свою кофейню!</string>
    <string name="rating_text">Ваша оценка</string>
</resources>
