<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nsvRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.example.adm1n.coffeescope.custom_view.GreatEditText
            android:id="@+id/cvRegistrationLastName"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:hint="@string/last_name" />

        <com.example.adm1n.coffeescope.custom_view.GreatEditText
            android:id="@+id/cvRegistrationName"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/cvRegistrationLastName"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:hint="@string/name" />

        <com.example.adm1n.coffeescope.custom_view.GreatEditText
            android:id="@+id/cvRegistrationEmail"
            apphint="@string/e_mail_address"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/cvRegistrationName"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:hint="@string/e_mail_address"
            app:type="email" />

        <com.example.adm1n.coffeescope.custom_view.GreatEditText
            android:id="@+id/cvRegistrationPassword"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/cvRegistrationEmail"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:hint="@string/password"
            app:type="password" />

        <com.example.adm1n.coffeescope.custom_view.GreatEditText
            android:id="@+id/cvRegistrationConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/cvRegistrationPassword"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:hint="@string/repeat_password"
            app:type="password" />

        <Button
            android:id="@+id/btnRegistrationFinish"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/cvRegistrationConfirmPassword"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/green_btn_selector"
            android:text="@string/registration" />

        <TextView
            android:id="@+id/tvPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnRegistrationFinish"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/registration_policy"
            android:textColor="@color/grey"
            android:textSize="15sp" />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>
