<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nsvProfileMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rlProfileMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <android.support.v7.widget.CardView
            android:id="@+id/cvProfileName"
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilName"
                style="@style/IntroductionTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/etProfileName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/name"
                    android:imeOptions="actionGo"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvProfileLastName"
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/cvProfileName"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilLastName"
                style="@style/IntroductionTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/etProfileLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/last_name"
                    android:imeOptions="actionGo"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvProfileEmail"
            style="@style/CardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/cvProfileLastName"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/IntroductionTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/etProfileEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/e_mail_address"
                    android:imeOptions="actionGo"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnRegistrationFinish"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_below="@+id/cvProfileEmail"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/green_btn_selector"
            android:text="@string/save" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvProfileFeedback"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@+id/btnRegistrationFinish"
            android:layout_marginTop="24dp"
            app:cardElevation="6dp">

            <TextView
                android:id="@+id/tvProfileFeedback"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/write_feedback"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/cvProfileChangePassword"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_below="@+id/cvProfileFeedback"
            android:layout_marginTop="16dp"
            app:cardElevation="6dp">

            <TextView
                android:id="@+id/tvProfileChangePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/edit_pass"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnProfileLogout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/cvProfileChangePassword"
            android:layout_marginTop="35dp"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textColor="@color/grey"
            android:textSize="20sp" />
    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>